--- a/aclap/src/app/components/profile-shared/profile/profile.component.tns.scss
+++ b/aclap/src/app/components/profile-shared/profile/profile.component.tns.scss
@@ -27,19 +27,46 @@ $l-grey: #d3d8d8;
     text-align: center;
 }
 
+.text-impl{
+    text-align: left;
+    margin-left: 15;
+    margin-top: 5;
+}
+
 .subtitle-text-impl{
     color: #000000;
     font-weight: bold;
-    font-size: 14;
-    margin-left: 15;
-    margin-top: 12;
-    text-align: left;
+    font-size: 22;
 }
 
 .text{
     font-size: 12;
     color: rgb(0, 0, 0);
     text-align: center;
+}
+
+.date-text{
+    font-size: 12;
+    color: #596668;
+    text-align: left;
+    margin-left: 15;
+    margin-bottom: 10;
+}
+
+.text-completed{
+    font-size: 12;
+    font-weight: bold;
+    color: #39f158;
+    text-align: left;
+    margin-left: 15;
+}
+
+.text-incomplete{
+    font-size: 12;
+    font-weight: bold;
+    color: #f13939;
+    text-align: left;
+    margin-left: 15;
 }
 
 .user-text{
@@ -71,18 +98,8 @@ $l-grey: #d3d8d8;
     background-color: #f13939;
     font-size: 12;
     font-weight: bold;
-    width: 60;
-    height: 30;
-    margin: 10;
-}
-
-.btn-implEdit {
-    color: #ffffff;
-    border-radius: 3;
-    background-color: #23AEE5;
-    font-size: 12;
-    font-weight: bold;
-    width: 60;
-    height: 30;
-    margin: 10;
+    width: 20;
+    height: 20;
+    margin-right: 15;
+    margin-top: 15;
 }
