--- a/aclap/src/app/components/section-shared/display/display-files/display-files.component.tns.html
+++ b/aclap/src/app/components/section-shared/display/display-files/display-files.component.tns.html
@@ -6,7 +6,27 @@
 
                 <Card:CardView class="cardStyle" margin="10" elevation="10" shadowColor="#FE00FC" shadowOpacity="1" radius="25" ripple=true (tap)="startDownload(file.url, file.name)">
                     <GridLayout columns="auto, *, auto" rows="auto, *, auto">
-                        <Image rowSpan="3" col="0" src="https://ddo0fzhfvians.cloudfront.net/uploads/icons/png/2725159511543238876-512.png" class="download-img"></Image>
+
+                        <StackLayout rowSpan="3" col="0" *ngIf="isPdf(file.name)">
+                            <Image src="res://pdf" class="download-img"></Image>
+                        </StackLayout>
+
+                        <StackLayout rowSpan="3" col="0" *ngIf="isPpt(file.name)">
+                            <Image src="res://ppt" class="download-img"></Image>
+                        </StackLayout>
+
+                        <StackLayout rowSpan="3" col="0" *ngIf="isDoc(file.name)">
+                            <Image src="res://doc" class="download-img"></Image>
+                        </StackLayout>
+
+                        <StackLayout rowSpan="3" col="0" *ngIf="isImg(file.name)">
+                            <Image src="res://img" class="download-img"></Image>
+                        </StackLayout>
+
+                        <StackLayout rowSpan="3" col="0" *ngIf="isFile(file.name)">
+                            <Image src="res://file" class="download-img"></Image>
+                        </StackLayout>
+
                         <Label row="0" col="1" text="{{ file.name }}" class="title-text" textWrap="true" ></Label>
                         <Label row="1" col="1" text="Tamaño: {{ formatBytes(file.bytes) }}" class="size-text" textWrap="true" ></Label>
                     </GridLayout>
