changed error trans imports

--- a/aclap/src/app/components/app.component.tns.html
+++ b/aclap/src/app/components/app.component.tns.html
@@ -5,20 +5,23 @@
       <StackLayout class="sidedrawer-content">
 
         <Image src="res://logo_flat" class="img-header"></Image>
-        <Button class="btn btn-primary sidedrawer-list-item-text" text="Inicio" (tap)="navigateToHome()"></Button>
-        <Button class="btn btn-primary sidedrawer-list-item-text" text="Modulos" (tap)="navigateToModules()"></Button>
-        <Button class="btn btn-primary sidedrawer-list-item-text" text="Eventos" (tap)="navigateToEvents()"></Button>
-        <Button class="btn btn-primary sidedrawer-list-item-text" text="Perfil" (tap)="navigateToProfile()"></Button>
-        <Button class="btn btn-primary sidedrawer-list-item-text" text="Acerca de"></Button>
+        <Button class="btn-nav" text="Inicio" (tap)="navigateToHome()"></Button>
+        <Button class="btn-nav" text="Modulos" (tap)="navigateToModules()"></Button>
+        <Button class="btn-nav" text="Eventos" (tap)="navigateToEvents()"></Button>
+        <Button class="btn-nav" text="Perfil" (tap)="navigateToProfile_Login()"></Button>
+        <Button class="btn-nav" text="Acerca de"></Button>
           
       </StackLayout>
 
       <StackLayout class="sidedrawer-footer">
 
         <StackLayout orientation="horizontal" width="245" height="100">
-          <Label text="Ingresar" horizontalAlignment="left" color="white" (tap)="navigateToLogin()"></Label>
-          <Label text="       " horizontalAlignment="center"></Label>
-          <Label text="Ser educador" horizontalAlignment="right" color="white" (tap)="navigateToEducatorApplication()"></Label>
+
+          <Label text="Ingresar" horizontalAlignment="left" class="text-nav" (tap)="navigateToProfile_Login()"></Label>
+
+          <Label text="         " horizontalAlignment="center"></Label>
+
+          <Label text="Ser educador" horizontalAlignment="right" class="text-nav" (tap)="navigateToEducatorApplication()"></Label>
         </StackLayout>
 
       </StackLayout>
