--- a/aclap/src/app/components/profile-shared/profile/profile.component.tns.html
+++ b/aclap/src/app/components/profile-shared/profile/profile.component.tns.html
@@ -5,7 +5,7 @@
 
             <Gridlayout height="50" columns="auto, *, auto" rows="auto, 25" backgroundColor="#1c81a9">
                 <Label col="1" rowSpan="2" text="{{ user.name }}" horizontalAlignment="left" class="user-text"></Label>
-                <Button col="2" rowSpan="2" text="Logout" horizontalAlignment="right" class="btn btn-primary btn-logout"></Button>
+                <Button col="2" rowSpan="2" text="Logout" horizontalAlignment="right" class="btn btn-primary btn-logout" (tap)="logout()"></Button>
             </Gridlayout>
 
             <StackLayout *ngFor="let implementation of implementationsCompleted; index as i" orientation="vertical">
