--- a/aclap/src/app/components/shared/login/login.component.tns.html
+++ b/aclap/src/app/components/shared/login/login.component.tns.html
@@ -4,7 +4,7 @@
         <Image src="res://logo" class="logo"></Image>
         <TextField formControlName="username" hint="Correo electrónico" class="input input-border input-login"></TextField>
         <TextField formControlName="password" hint="Contraseña" secure="true" class="input input-border input-login"></TextField>
-        <Button text="Ingresar" class="btn btn-primary btn-login"></Button>
+        <Button text="Ingresar" class="btn btn-primary btn-login" (tap)="onSubmit()"></Button>
     </form>
     <Label class="center">
         <FormattedString>
