Implemetation Bugs Fixed

--- a/aclap/src/app/components/module-shared/module-page/module-page.component.html
+++ b/aclap/src/app/components/module-shared/module-page/module-page.component.html
@@ -68,6 +68,13 @@
         </div>
     </div>
     <div class="div" *ngIf="showingFiles">
+        <div class="row">
+            <div class="col">
+                <h1>
+                    Material Descargable
+                </h1>
+            </div>
+        </div>
         <app-display-files [files]="files"></app-display-files>
     </div>
 </div>
