--- a/aclap/src/app/components/profile-shared/implementation-display/implementation-display.component.html
+++ b/aclap/src/app/components/profile-shared/implementation-display/implementation-display.component.html
@@ -26,7 +26,7 @@
 </div>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-6">
             <div class="row">
                 <div class="col-6">
                     <span> Nombre de la persona educadora: {{ implementation.educatorName }} {{ implementation.educatorLastname }} </span>
@@ -47,15 +47,17 @@
                 <div class="col-12">
                     <h3>Preguntas de evaluación</h3>
                 </div>
-                <div class="col">
-                    <app-display-questions [questions]="questions" [answers]="answers" [editing]="true" [editable]="false" ></app-display-questions>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="container">
+                        <app-display-questions [questions]="questions" [answers]="answers" [editing]="true" [editable]="false" ></app-display-questions>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="row">
                 <div class="col-12">
-                    <h2>Lugar donde se realizó la ectividad</h2>
+                    <h2>Lugar donde se realizó la actividad</h2>
                 </div>
                 <div class="col-8">
                     <div style="height: 300px;"
@@ -75,9 +77,9 @@
                 <div class="col-12">
                     <h2> Evidencias de trabajo </h2>
                 </div>
-                <app-display-files [files]="files"></app-display-files>
             </div>
-            <div class="row border rounded border-danger mb-md-5">
+            <app-display-files [files]="files"></app-display-files>
+            <div class="row border rounded border-danger mb-md-5" style="margin-top: 100px;">
                 <div class="col-8 my-3">
                     <div class="row" style="margin-left: 12px;">
                         <h5 class="text-bold">Eliminar implementación</h5>
