--- a/aclap/src/app/components/profile-shared/implementation-edit/implementation-edit.component.html
+++ b/aclap/src/app/components/profile-shared/implementation-edit/implementation-edit.component.html
@@ -52,7 +52,7 @@
                     <label for="participants" class="col-2 col-form-label">Participantes</label>
                     <div class="col">
                         <select class="form-control" [(ngModel)]="implementation.participants" >
-                            <option *ngFor="let n of getRange(50)" value="n">
+                            <option *ngFor="let n of getRange(50)" [value]="n">
                                 {{n}}
                             </option>
                         </select>
