--- a/aclap/src/app/components/shared/footer/footer.component.html
+++ b/aclap/src/app/components/shared/footer/footer.component.html
@@ -15,7 +15,7 @@
                     <li><a [routerLink]="['/perfil']">Perfil</a></li>
                     <li><a [routerLink]="['/modulos']">Módulos</a></li>
                     <li><a [routerLink]="['/eventos']">Eventos</a></li>
-                    <li><a>Acerca de</a></li>
+                    <li><a [routerLink]="['/acerca-de']">Acerca de</a></li>
                 </ul>
             </div>
             <div class="col-3 offset-xs-1 offset-sm-2 col-sm-3">
