--- a/aclap/src/app/components/shared/header/header.component.html
+++ b/aclap/src/app/components/shared/header/header.component.html
@@ -11,7 +11,7 @@
                 <li *ngIf="loggedIn" (click)="changeIndex(1)" class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" [routerLink]="['/perfil']"> Perfil</a></li>
                 <li (click)="changeIndex(0)" class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" [routerLink]="['/modulos']">Módulos</a></li>
                 <li (click)="changeIndex(0)" class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" [routerLink]="['/eventos']">Eventos</a></li>
-                <li (click)="changeIndex(0)" class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" >Acerca de</a></li>
+                <li (click)="changeIndex(0)" class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" [routerLink]="['/acerca-de']">Acerca de</a></li>
             </ul>
             <span class="navbar-text">
                 <a *ngIf="!loggedIn" id="singupButton" [routerLink]="['/persona-educadora']" class="btn btn-accend">Persona Educadora</a>
