--- a/aclap/src/app/components/shared/register/register.component.html
+++ b/aclap/src/app/components/shared/register/register.component.html
@@ -8,8 +8,10 @@
     </div>
 </div>
 <div class="container">
-    <div class="row row-content">
-        <app-displayer [sections]="texts"></app-displayer>
+    <div class="row mt-5">
+        <div class="col-12">
+            <p class="text-justify" style="font-size: 25px;"> {{description}} </p>
+        </div>
     </div>
     <div class="card shadow-lg mb-4">
         <div class="card-header">
