--- a/aclap/src/app/components/profile-shared/implementable-implementations/implementable-implementations.component.html
+++ b/aclap/src/app/components/profile-shared/implementable-implementations/implementable-implementations.component.html
@@ -29,25 +29,27 @@
     </div>
     <div *ngFor="let imp of implementations" class="row">
         <div class="card shadow" [routerLink]="['/implementacion','ver', imp.id]" >
-            <div class="row">
-                <div class="col-md-6">
-                    <span>Realizado por: {{ imp.educatorName }} {{ imp.educatorLastname }} </span>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <span>Realizado por: {{ imp.educatorName }} {{ imp.educatorLastname }} </span>
+                    </div>
+                    <div class="col  d-flex justify-content-end">
+                        <span>Fecha: {{ imp.date | date: 'dd/MM/yyyy' }} </span>
+                    </div>
                 </div>
-                <div class="col">
-                    <span>Fecha: {{ imp.date | date: 'dd/MM/yyyy' }} </span>
+                <div class="row">
+                    <div class="col-md-4">
+                        <span>Cantidad de participantes: {{ imp.participants }} </span>
+                    </div>  
+                    <div class="col d-flex justify-content-end">
+                        <span>Ubicación: {{ imp.location.name }}</span>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <span>Cantidad de participantes: {{ imp.participants }} </span>
-                </div>  
-                <div class="col">
-                    <span>Ubicación: {{ imp.location.name }}</span>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col d-flex justify-content-center">
-                    <span>Tocar para ver detalles</span>
+                <div class="row">
+                    <div class="col d-flex justify-content-center">
+                        <span>Tocar para ver detalles</span>
+                    </div>
                 </div>
             </div>
         </div>
