UI + corresponding images

--- a/aclap/src/app/components/about-us/about-us.component.html
+++ b/aclap/src/app/components/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid header-image" [ngStyle]="{backgroundImage:'url(https://www.visitcentroamerica.com/wp-content/uploads/2018/01/ver-centroamerica-costa-rica-parque-nacional-chirripo-3.jpg)'}">
+<div class="jumbotron jumbotron-fluid header-image" [ngStyle]="{backgroundImage:'url('+ bg_img +')'}">
 
 </div>
 <div class="container">
@@ -6,7 +6,7 @@
         <div class="col-12">
             <span>
                 <h1>
-                    Acerca de <img class="img-fluid" style="width: 20%;" src="../../../assets/logo-alpha.png" alt="ACLA-P EDUCA">
+                    Acerca de ACLA-P
                 </h1>
             </span>
         </div>
