--- a/aclap/src/app/components/event-shared/teaching-guide/teaching-guide.component.html
+++ b/aclap/src/app/components/event-shared/teaching-guide/teaching-guide.component.html
@@ -18,7 +18,7 @@
     </div>
 </div>
 <div class="container">
-    <div class="row">
+    <div class="row mt-4">
         <div class="col-12">
             <app-displayer [sections]="sections"></app-displayer>
         </div>
