--- a/aclap/src/app/components/section-shared/display/display-image/display-image.component.scss
+++ b/aclap/src/app/components/section-shared/display/display-image/display-image.component.scss
@@ -8,6 +8,12 @@
     height: auto;
 }
 
+.image{
+    height: 400px;
+    background-size: cover;
+    background-position: 50% 50%;
+}
+
 .kalim {
     display: inline-block;
     max-width: 500px; 
