--- a/aclap/src/app/components/shared/register/register.component.html
+++ b/aclap/src/app/components/shared/register/register.component.html
@@ -1,19 +1,17 @@
-<div class="jumbotron jumbotron-fluid header-image" [ngStyle]="{backgroundImage:'url(https://images.unsplash.com/photo-1604390254113-b1b9e87bdf11?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=400&ixlib=rb-1.2.1&q=80&w=1280)'}">
-    <div class="container fill d-flex align-items-center">
-        <div class="col d-flex justify-content-center title">
-            <h1>
-                PERSONA EDUCADORA
-            </h1>
-        </div>
-    </div>
+<div class="jumbotron jumbotron-fluid header-image" [ngStyle]="{backgroundImage:'url('+ bg_img +')'}">
 </div>
 <div class="container">
-    <div class="row mt-5">
+    <div class="row mt-4">
         <div class="col-12">
-            <p class="text-justify" style="font-size: 25px;"> {{description}} </p>
+            <h1>
+                Persona Educadora
+            </h1>
+        </div>
+        <div class="col-12 mt-3">
+            <p class="text-justify"> {{description}} </p>
         </div>
     </div>
-    <div class="card shadow-lg mb-4">
+    <div class="card shadow mb-4 mt-3">
         <div class="card-header">
             <div class="card-title">
                 <h5>Complete este formulario para registrarse como Persona Eucadora</h5>
