--- a/aclap/src/app/components/about-us/about-us.component.scss
+++ b/aclap/src/app/components/about-us/about-us.component.scss
@@ -1,5 +1,9 @@
 @use '../app.component.scss';
 
+.header-image{
+    background-position: 50% 50%;
+}
+
 @media (min-width: 768px) {
     .jumbotron {
         height: 300px;
