--- a/aclap/src/app/components/section-shared/display/display-title/display-title.component.html
+++ b/aclap/src/app/components/section-shared/display/display-title/display-title.component.html
@@ -1,3 +1,5 @@
-<div *ngIf="title.size === h1"><h1> {{ title.text }}</h1></div>
-<div *ngIf="title.size === h2"><h2> {{ title.text }}</h2></div>
+<div class="mt-4">
+    <div *ngIf="title.size === h1"><h1> {{ title.text }}</h1></div>
+    <div *ngIf="title.size === h2"><h2> {{ title.text }}</h2></div>
+</div>
 
