--- a/aclap/src/app/components/shared/register/register.component.scss
+++ b/aclap/src/app/components/shared/register/register.component.scss
@@ -9,13 +9,9 @@
     flex-wrap: wrap;
 }
 
-
 .header-image{
-    height: 100%;
-    min-height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
+    background-position: 50% 20%; 
 }
 
 .title{
