--- a/aclap/src/app/components/profile-shared/educator-application/educator-application.component.tns.scss
+++ b/aclap/src/app/components/profile-shared/educator-application/educator-application.component.tns.scss
@@ -47,8 +47,8 @@ $l-grey: #d3d8d8;
   color: #000000;
   font-size: 18;
   margin-left: 10;
+  margin-bottom: 5;
   text-align: left;
-  margin-top: 5;
 }
 
 .text-subtitle-first-2 {
@@ -62,7 +62,8 @@ $l-grey: #d3d8d8;
 .text-body {
   font-size: 14;
   color: rgb(0, 0, 0);
-  text-align: left;
-  margin-left: 20;
+  text-align: center;
+  margin-left: 10;
+  margin-right: 10;
   margin-bottom: 5;
 }
