--- a/aclap/src/app/components/section-shared/display/displayer/displayer.component.tns.scss
+++ b/aclap/src/app/components/section-shared/display/displayer/displayer.component.tns.scss
@@ -19,6 +19,7 @@ $l-grey: #d3d8d8;
 .title-text{
     font-size: 24;
     font-weight: bold;
+    background-color: #1c81a9;
     color: rgb(255, 255, 255);
     text-align: center;
 }
