--- a/aclap/src/app/components/home/home.component.tns.html
+++ b/aclap/src/app/components/home/home.component.tns.html
@@ -3,10 +3,13 @@
         <StackLayout orientation="vertical">
             <gridlayout rows="*, *, *, *" columns="*" backgroundColor="black">
                 <Image rowspan="3" col="0" src="res://biolley_cielo" stretch="aspectFill" class="banner-img"></Image>
-                <Label row="1" col="0" text="Presentación" class="header-text" textWrap="true"></Label>
+                <Label row="1" col="0" text="Conoce ACLA-P Educa" class="header-text" textWrap="true"></Label>
             </gridlayout>
             <Label
-            text= "El Programa de Educación Ambiental del Área de Conservación La Amistad Pacífico (ACLA-P), es un esfuerzo colectivo de la institución, sus funcionarios y funcionarias, en conjunto con organizaciones de base comunal, sector científico, y personas líderes comunales. Los aportes de cada una de estas personas han forjado los cimientos de esta plataforma, que ahora toma ventaja de las tecnologías de la información y los principios del libre acceso, para compartir las herramientas educativas que tenemos a disposición. Además, invitamos a los y las usuarias, a compartir con nosotros sus logros al implementar las actividades de educación ambiental en el ACLA-P. Esta plataforma es una ventana para que todas las personas que sienten el anhelo por contribuir a una cultura ambiental, puedan hacerlo desde los procesos educativos, ya sea en sus núcleos familiares, su comunidad o incluso a nivel organizacional y regional. Los procesos de educación ambiental pueden tomar formas muy variadas, desde acciones concretas en los hogares, actividades en centros educativos, hasta festivales y celebraciones cantonales o nacionales. Todos y cada uno de estos aportes suman hacia el desarrollo sostenible global. Explora los módulos educativos que tenemos para compartir, celebra las efemérides ambientales más queridas en nuestra institución, y cuéntanos como utilizas estas herramientas para el bien de todos los seres vivos de este planeta."
+            text= "El Programa de Educación Ambiental del Área de Conservación La Amistad Pacífico (ACLA-P), es un esfuerzo colectivo de la institución, sus funcionarios y funcionarias, en conjunto con personas líderes comunales, organizaciones de base, sector científico y organismos internacionales. Los aportes de todos y todas se concretan en esta plataforma de herramientas de educación ambiental, con el fin de continuar compartiendo la responsabilidad por conservar los tesoros naturales de Costa Rica."
+            class= "body-text" textWrap="true" ></Label>
+            <Label
+            text= "Explora los módulos educativos que tenemos para compartir, celebra las efemérides ambientales más queridas de nuestra institución, y cuéntanos cómo utilizas estas herramientas para la construcción de una cultura ambiental.  Todos y cada uno de estos aportes suman hacia el desarrollo sostenible local y global."
             class= "body-text" textWrap="true" ></Label>
             <Button text="¿Qué significa ser una persona educadora?" class="nav-btn" (tap)="navigateToEducatorApplication()"></Button>
             <Button text="Módulos educativos" class="nav-btn" (tap)="navigateToModules()"></Button>
