--- a/aclap/src/app/components/profile-shared/implementation-edit/implementation-edit.component.tns.html
+++ b/aclap/src/app/components/profile-shared/implementation-edit/implementation-edit.component.tns.html
@@ -1,1 +1,93 @@
-<Button text="implementation-edit works!" class="btn btn-primary"></Button>
+<StackLayout>
+    <ScrollView orientation="vertical"  height="1000">
+        <StackLayout orientation="vertical">
+
+            <GridLayout rows="*, *, *, *" columns="*" backgroundColor="black">
+                <Image rowspan="3" row="0" col="0" stretch="aspectFill" src="res://corredor_bio_1" class="img-banner"></Image>
+                <Label row="1" col="0" text="Evaluación del módulo: {{ implementation.implementableName }}" class="header-text" textWrap="true"></Label>
+                <Label row="2" col="0" text="Realizado por: {{ user.name }}" class="madeby-text"  horizontalAlignment="left" textWrap="true"></Label>
+            </GridLayout>
+
+            <Label text="Formulario" class="text-subtitle-first" textWrap="true"></Label>
+
+            <StackLayout orientation="horizontal">
+                <Label text="Fecha:" class="subtitle-text-picker" textWrap="true"></Label>
+                <DatePicker [(ngModel)]="pickerDate" 
+                    [date]="todayDate"
+                    [minDate]="minDate" [maxDate]="maxDate"
+                    verticalAlignment="center" class="date-picker">
+                </DatePicker>
+            </StackLayout>
+
+            <Label text="Ubicación:" class="subtitle-text" textWrap="true"></Label>
+            <TextField [(ngModel)]="txtAddress" hint="Distrito, Cantón, Provincia" class="input input-border input-form"></TextField>
+
+            <StackLayout orientation="horizontal">
+                <Label text="Participantes: " class="subtitle-text-picker" textWrap="true"></Label>
+                <ListPicker [(ngModel)]="pickerParticipants" [items]="participants" selectedIndex="0" class="participant-picker"></ListPicker>
+            </StackLayout>
+
+            <Label text="Preguntas de evaluación" class="title-text-questions" textWrap="true"></Label>
+
+            <StackLayout *ngFor="let question of questions; index as i" orientation="vertical">
+                <Label text="{{ question.question }}" class="subtitle-text-question" textWrap="true"></Label>
+                <StackLayout orientation="horizontal">
+                    <ListPicker [items]="questionOptions[i]" selectedIndex="2"  class="answer-picker" (selectedIndexChange)="onSelectedIndexChanged($event, i)"></ListPicker>
+                    <Image src="{{ imageOptions[i] }}" class="img-answer-icon"></Image>
+                </StackLayout>
+            </StackLayout>
+
+            <Label text="Evidencias de trabajo" class="title-text-questions" textWrap="true"></Label>
+
+            <StackLayout *ngFor="let file of files; index as i" orientation="vertical">
+
+                <Card:CardView class="cardStyle" margin="10" elevation="10" shadowColor="#FE00FC" shadowOpacity="1" radius="25" ripple=true>
+                    <StackLayout orientation="horizontal">
+
+                        <StackLayout *ngIf="isImg(file.name)">
+                            <Image src="{{ file.name }}" class="file-img"></Image>
+                        </StackLayout>
+
+                        <StackLayout *ngIf="isFile(file.name)">
+                            <Image src="res://file" class="file-img"></Image>
+                        </StackLayout>
+
+                        <Label text="{{ file.name }}" class="subtitle-text-file"></Label>
+                        <Button text="x" class="btn btn-primary btn-fileRemover" (tap)="removeOldFile(i)"></Button>
+                    
+                    </StackLayout>
+                </Card:CardView>
+
+            </StackLayout>
+
+            <StackLayout *ngFor="let file of fileNames; index as i" orientation="vertical">
+
+                <Card:CardView class="cardStyle" margin="10" elevation="10" shadowColor="#FE00FC" shadowOpacity="1" radius="25" ripple=true>
+                    <StackLayout orientation="horizontal">
+
+                        <StackLayout *ngIf="isImg(file)">
+                            <Image src="{{ filePaths[i] }}" class="file-img"></Image>
+                        </StackLayout>
+
+                        <StackLayout *ngIf="isFile(file)">
+                            <Image src="res://file" class="file-img"></Image>
+                        </StackLayout>
+
+                        <Label text="{{ file }}" class="subtitle-text-file"></Label>
+                        <Button text="x" class="btn btn-primary btn-fileRemover" (tap)="removeFile(i)"></Button>
+                    
+                    </StackLayout>
+                </Card:CardView>
+
+            </StackLayout>
+
+            <Button text="Buscar un archivo" class="btn btn-primary btn-fileFinder" (tap)="findFile()"></Button>
+
+            <StackLayout orientation="horizontal">
+                <Button text="Guardar" class="btn btn-primary btn-save" (tap)="onSubmit('save')"></Button>
+                <Button text="Enviar" class="btn btn-primary btn-send" (tap)="onSubmit('complete')"></Button>
+            </StackLayout>
+
+        </StackLayout>
+    </ScrollView>
+</StackLayout>
