--- a/aclap/src/app/components/profile-shared/profile/profile.component.tns.html
+++ b/aclap/src/app/components/profile-shared/profile/profile.component.tns.html
@@ -4,7 +4,7 @@
         <StackLayout orientation="vertical">
 
             <Gridlayout height="50" columns="auto, *, auto" rows="auto, 25" backgroundColor="#1c81a9">
-                <Label col="1" rowSpan="2" text="{{ user.name }}" horizontalAlignment="left" class="user-text"></Label>
+                <Label col="1" rowSpan="2" text="{{ user.name }} {{ user.lastname }}" horizontalAlignment="left" class="user-text"></Label>
                 <Button col="2" rowSpan="2" text="Logout" horizontalAlignment="right" class="btn btn-primary btn-logout" (tap)="logout()"></Button>
             </Gridlayout>
 
@@ -12,8 +12,8 @@
 
                 <Card:CardView class="cardStyle" margin="10" elevation="10" shadowColor="#FE00FC" shadowOpacity="1" radius="25" ripple=true>
                     <GridLayout columns="auto, *, auto" rows="auto, *, auto">
-                        <Button row="0" col="2" text="x" class="btn btn-primary btn-implRemover"></Button>
-                        <Label row="0" col="0" class="text-impl" textWrap="true">
+                        <Button row="0" col="2" text="x" class="btn btn-primary btn-implRemover" (tap)="removeCompleteImpl(implementation.id, i)"></Button>
+                        <Label row="0" col="0" class="text-impl" textWrap="true" (tap)="completeDialog()">
                             <FormattedString>
                                 <Span text="{{ implementation.implementableName }} | " class="subtitle-text-impl"></Span>
                                 <Span text="Completo" class="text-completed"></Span>
@@ -29,8 +29,8 @@
 
                 <Card:CardView class="cardStyle" margin="10" elevation="10" shadowColor="#FE00FC" shadowOpacity="1" radius="25" ripple=true>
                     <GridLayout columns="auto, *, auto" rows="auto, *, auto">
-                        <Button row="0" col="2" text="x" class="btn btn-primary btn-implRemover"></Button>
-                        <Label row="0" col="0" class="text-impl" textWrap="true">
+                        <Button row="0" col="2" text="x" class="btn btn-primary btn-implRemover" (tap)="removeIncompleteImpl(implementation.id, i)"></Button>
+                        <Label row="0" col="0" class="text-impl" textWrap="true" (tap)="navigateToEditImplementation(implementation.id)">
                             <FormattedString>
                                 <Span text="{{ implementation.implementableName }} | " class="subtitle-text-impl"></Span>
                                 <Span text="Incompleto" class="text-incomplete"></Span>
