--- a/aclap/src/app/components/shared/login/login.component.tns.html
+++ b/aclap/src/app/components/shared/login/login.component.tns.html
@@ -1,15 +1,18 @@
 
 <StackLayout>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <Image src="res://logo" class="logo"></Image>
-        <TextField formControlName="username" hint="Correo electrónico" class="input input-border input-login"></TextField>
-        <TextField formControlName="password" hint="Contraseña" secure="true" class="input input-border input-login"></TextField>
-        <Button text="Ingresar" class="btn btn-primary btn-login" (tap)="onSubmit()"></Button>
-    </form>
+
+    <StackLayout>
+        <Image src="res://logo_flat" class="logo"></Image>
+        <TextField [(ngModel)]="txtUsername" hint="Correo electrónico" class="input input-border input-login"></TextField>
+        <TextField [(ngModel)]="txtPassword" hint="Contraseña" secure="true" class="input input-border input-login"></TextField>
+        <Button text="Login" class="btn btn-primary btn-login" (tap)="onSubmit()"></Button>
+    </StackLayout>
+
     <Label class="center">
         <FormattedString>
           <Span text="Olvidó su contraseña? "class="password-recov-text"></Span>
           <Span text="Presione aquí" class="password-recov-text-link"></Span>
         </FormattedString>
     </Label>
+
 </StackLayout>
